# codde-manager

./: .gitignore  LICENSE  README.md  codde-manager.desktop  deb_build.yml  deb_deploy.yml  dopy-manager.desktop  dopymanager.desktop  requirements.txt  setup.cfg  setup.py
.github/workflow/: deb_deploy.yml
.pybuild/cpython3_3.9/: .pydistutils.cfg
coddemanager/: main.py
coddemanager/exc/: install.py  run.py
debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  dopymanager.postinst.debhelper  dopymanager.prerm.debhelper  files  rules
debian/dopymanager/DEBIAN/: control  md5sums  postinst  prerm
debian/dopymanager/usr/lib/python3/dist-packages/dopymanager/: install.py  main.py  run.py
debian/dopymanager/usr/lib/python3/dist-packages/dopymanager-0.0.2.egg-info/: PKG-INFO
debian/dopymanager/usr/lib/python3/dist-packages/dopymanager-0.0.3.egg-info/: PKG-INFO  entry_points.txt
debian/dopymanager/usr/lib/python3/dist-packages/dopymanager-0.0.4.egg-info/: PKG-INFO
debian/dopymanager/usr/lib/python3/dist-packages/dopymanager/exc/: __init__.py  install.py
debian/dopymanager/usr/share/applications/: dopymanager.desktop
debian/dopymanager/usr/share/doc/dopymanager/: README.Debian  copyright
dopy-manager/services/: __init__.py  install.py
dopymanager/: __init__.py  install.py  main.py  run.py
dopymanager/services/: install.py
dopymanager/utils/: __init__.py  term_colors.py
src/: main.py
src/services/: install.py  run.py
