[metadata]
name = codde_manager
version = file: VERSION
description = My package description
long_description = file: README.md, CHANGELOG.rst, LICENSE
keywords = one, two
license = BSD 3-Clause License
classifiers =
    Framework :: Django
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
include_package_data = True
packages = find:
scripts =
    bin/first.py
    bin/second.py
install_requires =
    websockets~=10.0
    pynput~=1.7.4
    services~=0.1.1
    keyboard~=0.13.5